adjusted spacing and styling of nav on mobile, corrected font color on larger screen sizes

--- a/sunnyside-agency-landing-page-main/css/styles.css
+++ b/sunnyside-agency-landing-page-main/css/styles.css
@@ -57,9 +57,10 @@ html {
     justify-content: space-between;
     flex-direction: row;
     padding: 1rem 2.25rem;
+    margin-top: 1.25rem;
     font-family: var(--font-family-barlow);
     font-size: 1rem;
-    color: var(--grayish-blue);
+    color: var(--white);
     width: 100vw;
     position: fixed;
     top: 0;
@@ -75,9 +76,8 @@ html {
 
 .nav-item {
     padding: 1rem;
-    margin: auto;
     width: 150px;
-    color: var(--v-dk-gray-blue);
+    color: var(--white);
     text-decoration: none;
   }
 
@@ -109,6 +109,8 @@ html {
   .nav-item.contact {
     background: var(--yellow);
     border-radius: 2rem;
+    font-family: var(--font-family-fraunces);
+    text-transform: uppercase;
   }
 
   @media (max-width: 768px) {
@@ -172,17 +174,15 @@ html {
   .nav-items.active {
     padding: 1.5rem;
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
+    align-items: center; 
     text-align: center; 
     border-top: 1px solid rgba(0, 0, 0, 0.3); 
     width: 100%;
     background: var(--white);
     position: relative;
 
-    /* .nav-item:hover {
-      background: $dark-grey;
-      color: $white;
-    } */
+    
   }
 
   .nav-items.active:before {
@@ -196,5 +196,9 @@ html {
     border-bottom: 10px solid var(--white);
     right: 0px;
     top: -20px;
+  }
+
+  .nav-item {
+      color: var(--v-dk-desat-blue);
   }
 }
